add all tests